# Machine-Learning-Agent

./: .gitignore  README.md  check_files.py  custom_tool.py  dpython_testing.ipynb  flowchart.md  list_dir.txt  list_directory.txt  pyproject.toml  requirements.txt  testing.ipynb
src/data_modelling/: crew.py  main.py
src/data_modelling/config/: agents.yaml  tasks.yaml
src/data_modelling/tools/: custom_tool.py  new_tools copy 2.py  new_tools.py
