[project]
name = "data_modelling"
version = "0.1.0"
description = "data_modelling using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[e2b]>=1.14.2",
    "crewai[tools]==1.14.2",
]

[project.scripts]
data_modelling = "data_modelling.main:run"
run_crew = "data_modelling.main:run"
train = "data_modelling.main:train"
replay = "data_modelling.main:replay"
test = "data_modelling.main:test"
run_with_trigger = "data_modelling.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
